tried 7th time to fix the layout shifting error

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,7 +38,7 @@ body {
 
 main {
 	width: 100vw;
-	height: 80vh;
+	height: 90vh;
 }
 
 @media (prefers-color-scheme: dark) {
